2338: Replace "preferred representation" in edit form with a "star" radio button * https://cits.artic.edu/redmine/issues/2338
* updated JS to include new elements in the nonasset edit when adding a new representation
* added stylings for font-awesome stars
* reordered nonasset’s representations array so that pref rep is [0]
* removed pref_rep_uri from rep_terms and corrected spec
* created new subclass for HiddenMultiSelectStarsInput and moved star HTML and logic over
* removed no-longer-needed _preferred_representation_uri.html.erb partial
* updated value for simple_form :as to use new subclass HiddenMultiSelectStarsInput
* added in thead, tr, and th’s for column titles
* added JS for starring/unstarring reps clientside
* fixed star CSS so they are identical whether filled or empty
* representations should be uniq!

2339: Replace "preferred representation" in view page with star icon
* https://cits.artic.edu/redmine/issues/2339

* remove preferred_reps table partial from nonasset show view
* tweak render_asset_relationship helper method to accept optional 3rd arg and pass it to asset_relationship partial as a local
* implement star_or_not method inside _asset_relationship partial & helper
* passing new 3rd arg of pref_rep_id to render partial method so that reps table can compare to each rep id to star it or not
* clicking on stars SHOULD NOT do anything on show action, increase specificity of element that jquery binds event to
* reorder citiwork presenter rep presenters that get passed to partial so starred is displayed as first <tr>
* work edit - document tr's should not have 'preferred' <th> and <td> when adding new ones

--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -154,3 +154,15 @@ p.unauthorized_asset_display.asset_title {
 .smaller-text {
   font-size: smaller;
 }
+
+.fa-star {
+  font-size: 1.6em;
+  color: yellow;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
+}
+
+.fa-star-o {
+  font-size: 1.8em;
+}
+
