--- a/app/views/records/edit_fields/_representation_uris.html.erb
+++ b/app/views/records/edit_fields/_representation_uris.html.erb
@@ -1,6 +1,6 @@
 <div class='autocomplete-components'>
 <h4>Representations</h4>  
 <p><em>Visual representations of this resource.</em></p>
-<%= f.input key, as: :hidden_multi_select, property: :representations, hint: false, label: false,
+<%= f.input key, as: :hidden_multi_select_stars, property: :representations, hint: false, label: false,
     input_html: { class: 'form-control' }, required: false %>
 </div>
