--- a/app/views/request_access_mailer/request_access.text.erb
+++ b/app/views/request_access_mailer/request_access.text.erb
@@ -1,7 +1,7 @@
 "Requested access to asset <%= @presenter.uid %>: <%= @presenter.title_or_label %> from <%= @presenter.requester_pretty_name %>".
 
-Approve request: "https://<%= @host %>/concern/generic_works/<%= @presenter.id %>/edit#share"
+Approve request: <%= edit_curation_concerns_generic_work_url(@presenter.id) + "#share" %>
 
-Review asset: "https://<%= @host %>/concern/generic_works/<%= @presenter.id %>"
+Review asset: <%= curation_concerns_generic_work_url(@presenter.id) %>
 
 If you rather decline or would like to request further information, please reply to this email explaining your concerns.
