--- a/app/views/curation_concerns/base/_asset_relationship.html.erb
+++ b/app/views/curation_concerns/base/_asset_relationship.html.erb
@@ -9,6 +9,7 @@
       <th>Preview</th>
       <th>Document Type</th>
       <th>Link</th>
+      <th>Visibility & Publishing</th>
       <th>UID</th>
       <th>Non-Object Caption</th>
     </tr>
@@ -25,6 +26,9 @@
           <% else %>
             <%= rel.to_s %>
           <% end %>
+        </td>
+        <td>
+          <%= rel.permission_badge %><%= publish_channels_to_badges(rel.publish_channels) %>
         </td>
         <td><%= rel.uid %></td>
         <td><%= rel.caption %></td>
