--- a/app/views/curation_concerns/base/_asset_relationship.html.erb
+++ b/app/views/curation_concerns/base/_asset_relationship.html.erb
@@ -4,7 +4,7 @@
   <tbody>
     <tr>
       <% if need_star %>
-        <th>Preferred</th>
+        <th>Pref.</th>
       <% end %>
       <th>Preview</th>
       <th>Document Type</th>
