--- a/app/views/records/edit_fields/_representation_uris.html.erb
+++ b/app/views/records/edit_fields/_representation_uris.html.erb
@@ -3,4 +3,5 @@
 <p><em>Visual representations of this resource.</em></p>
 <%= f.input key, as: :hidden_multi_select_stars, property: :representations, hint: false, label: false,
     input_html: { class: 'form-control' }, required: false %>
+<%= f.hidden_field :preferred_representation_uri, class: "preferred_representation" %>
 </div>
