--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -169,6 +169,6 @@ p.unauthorized_asset_display.asset_title {
   font-size: 1.8em;
 }
 
-table.relationships .label {
+table.relationships .label, #documents .label {
   display: inline-block;
 }
