--- a/app/views/curation_concerns/base/_asset_relationship.html.erb
+++ b/app/views/curation_concerns/base/_asset_relationship.html.erb
@@ -16,7 +16,10 @@
     <% presenters.each do |rel| %>
       <tr>
         <% if need_star %>
-          <td><i class="fa <%= star_or_not(rel.id, pref_rep_id) %>"></i></td>
+          <td>
+            <div class="<%= star_or_not(rel.id, pref_rep_id) %>">
+            </div>
+          </td>
         <% end %>
         <td><%= image_tag(rel.solr_document['thumbnail_path_ss']) %></td>
         <td><%= rel.document_types %></td>
