in LCL, decrease the amount of user_notification requests to every 5min * logs were a mess in LCL, so I customized the html attribute that the JS locks into * var should be set in each environment’s application.yml * in case var is not set before release/deploy, figaro.rb will proactively require configuration keys in initializer

--- a/app/views/users/_notify_number.html.erb
+++ b/app/views/users/_notify_number.html.erb
@@ -1,3 +1,3 @@
-<span class="notify_number label label-default" data-update-poll-url="<%= sufia.user_notify_path %>" data-update-poll-interval="<%= ENV["USER_NOTIFICATION_FREQ"] %>">
+<span class="notify_number label label-default" data-update-poll-url="<%= sufia.user_notify_path %>" data-update-poll-interval="<%= Figaro.env.user_notification_freq %>">
   <span class="count">0</span> <span class="sr-only">unread notifications</span>
 </span>
