--- a/app/views/sufia/batch_uploads/_form.html.erb
+++ b/app/views/sufia/batch_uploads/_form.html.erb
@@ -6,6 +6,7 @@
   <%= render 'curation_concerns/base/guts4form', f: f, tabs: %w[files metadata relationships share] do %>
   <% end %>
   <%= f.input :use_uri, as: :hidden %>
+  <%= f.hidden_field :uploaded_batch_id, value: UploadedBatch.create.id %>
 <% end %>
 
 <%= render "lakeshore_js_template" %>
