--- a/app/views/curation_concerns/base/_asset_relationship.html.erb
+++ b/app/views/curation_concerns/base/_asset_relationship.html.erb
@@ -31,7 +31,8 @@
           <% end %>
         </td>
         <td>
-          <%= rel.permission_badge %><%= publish_channels_to_badges(rel.publish_channels) %>
+          <%= rel.permission_badge %>
+          <%= publish_channels_to_badges(rel.publish_channels) %>
         </td>
         <td><%= rel.uid %></td>
         <td><%= rel.caption %></td>
