--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -35,9 +35,8 @@
       <%= render 'relationships', presenter: @presenter %>
       <%= render 'metadata', presenter: @presenter %>
     </div>
-
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-xs-12">
         <%= render 'items', presenter: @presenter %>
       </div>
     </div>
