--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,11 @@
 <footer class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-text text-left">
-      <p>&#169; 2015 The Art Institute of Chicago - Released under the Apache License, version 2.0</p>
+      <p>&#169; <%= Time.now.year %> The Art Institute of Chicago - Released under the Apache License, version 2.0</p>
+      <br>ENV: <%= Figaro.env.LAKESHORE_ENV %>
+      <br>SHA: <%= link_to(GIT_SHA, "https://github.com/aic-collections/aicdams-lakeshore/commit/#{GIT_SHA}") %>
+      <br>Branch: <%= BRANCH %>
+      <br>Updated: <%= LAST_DEPLOYED %>
     </div>
     <div class="navbar-right">
       <div class="navbar-text text-right">
