--- a/app/views/records/edit_fields/_copyright_representatives.html.erb
+++ b/app/views/records/edit_fields/_copyright_representatives.html.erb
@@ -15,7 +15,7 @@
           [ "Agent"], "Agent"), { class: "autocomplete_model", style: "width: 110px;" } %>
         </td>
         <td>
-          <%= f.input :copyright_representatives, as: :hidden_multi_select, hint: false, label: false,
+          <%= f.input :copyright_representatives, as: :citi_resources_multi_select, hint: false, label: false,
               input_html: { class: 'form-control' }, required: false %>
         </td>
       </tr>
