--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -40,5 +40,7 @@
         <%= render 'items', presenter: @presenter %>
       </div>
     </div>
+
+    <%= render 'shared/delete_asset_modal' %>
   <% end %>
 </div>
