--- a/app/views/related_assets/search.html.erb
+++ b/app/views/related_assets/search.html.erb
@@ -4,12 +4,12 @@
 
   <div class="form-group">
     <%= label_tag :model, "Model" %>
-    <%= select_tag :model, options_for_select(citi_models), class: 'form-control' %>
+    <%= select_tag :model, options_for_select(citi_models, "Work"), class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= label_tag :resource_id, "Resource ID" %>
-    <%= text_field_tag :resource_id, nil, class: "form-control" %>
+    <%= label_tag :resource_id, "CITI Pkey/UID" %>
+    <%= text_field_tag :resource_id, nil, class: "form-control", placeholder: "1234, 5678" %>
   </div>
 
   <div class="form-group">
